# arc-imu-ros

./: CMakeLists.txt  README.md  package.xml
include/arc-imu-ros/: imu_node.hpp  serial_bus_interface.hpp  wit_imu_node.hpp
include/arc-imu-ros/device/: device.hpp  witHWT9073.hpp
src/: imu_node.cpp  serial_bus_interface.cpp  wit_imu_node.cpp
src/device/: witHWT9073.cpp
